--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 			<a class="logo" ><img src="" width="" height="" alt="Логотип сайта туристического городка Седона">
 			</a>
 			<ul class="main-navigation">
-				<li><a href="">Информация</a></li>
-				<li><a href="">Фото и видео</a></li>
-				<li><a href="">Карта штата</a></li>
-				<li><a href="">Гостиницы</a></li>
+				<li><a href="#">Информация</a></li>
+				<li><a href="#">Фото и видео</a></li>
+				<li><a href="#">Карта штата</a></li>
+				<li><a href="hostels.html">Гостиницы</a></li>
 			</ul>
 		</nav>
 	</header>
