--- a/hostels.html
+++ b/hostels.html
@@ -7,7 +7,8 @@
   <body>
 	<header>
 		<nav class="site-navigation">
-			<a class="logo" href="index.html"><img src="" width="" height="" alt="Логотип сайта туристического городка Седона">
+			<a class="logo" href="index.html">
+				<img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип сайта туристического городка Седона">
 			</a>
 			<ul class="main-navigation">
 				<li><a href="#">Информация</a></li>
@@ -78,6 +79,7 @@
 				<button type="submit">Показать</button>
 			</form>
 		</section>
+
 		<section class="hotels">
 			<h2 class="visually-hidden">Найденные гостиницы</h2>
 			<div class="hotels-sorting-container">
@@ -95,13 +97,16 @@
 					</ul>
 				</div>
 			</div>
+
 			<ul class="hotels-list">
 				<li class="hotel-item">
 					<p class="hotel-item-image">
-						<img src="" width="" height="" alt="Гостиница Amara Resort & Spa">
+						<img src="img/hotel-amara.jpg" width="135" height="90" alt="Гостиница Amara Resort & Spa">
 					</p>
 					<div class="hotel-item-description">
-						<h3 class="hotel-title">Amara Resort & Spa</h3>
+						<h3 class="hotel-title">
+							<a href="#">Amara Resort & Spa</a>
+						</h3>
 						<p>
 							<span class="hotel-type">Гостиница</span>
 							<span class="hotel price">от 4000 Р.</span>
@@ -111,20 +116,22 @@
 					</div>
 					<div class="hotel-item-rating">
 						<p class="hotel-rating-star">
-							<img src="" width="" height="" alt="Категория: 4 звезды">
-							<img src="" width="" height="" alt="">
-							<img src="" width="" height="" alt="">
-							<img src="" width="" height="" alt="">
+							<img src="img/star.svg" width="18" height="17" alt="Категория: 4 звезды">
+							<img src="img/star.svg" width="18" height="17" alt="">
+							<img src="img/star.svg" width="18" height="17" alt="">
+							<img src="img/star.svg" width="18" height="17" alt="">
 						</p>
 						<p class="hotel-rating-number">Рейтинг: 8,5</p>
 					</div>
 				</li>
 				<li class="hotel-item">
 					<p class="hotel-item-image">
-						<img src="" width="" height="" alt="Мотель Desert Quail Inn">
+						<img src="img/hotel-desert.jpg" width="135" height="90" alt="Мотель Desert Quail Inn">
 					</p>
 					<div class="hotel-item-description">
-						<h3 class="hotel-title">Desert Quail Inn</h3>
+						<h3 class="hotel-title">
+							<a href="#">Desert Quail Inn</a>
+						</h3>
 						<p>
 							<span class="hotel-type">Мотель</span>
 							<span class="hotel price">от 3000 Р.</span>
@@ -134,19 +141,21 @@
 					</div>
 					<div class="hotel-item-rating">
 						<p class="hotel-rating-star">
-							<img src="" width="" height="" alt="Категория: 3 звезды">
-							<img src="" width="" height="" alt="">
-							<img src="" width="" height="" alt="">
+							<img src="img/star.svg" width="18" height="17" alt="Категория: 3 звезды">
+							<img src="img/star.svg" width="18" height="17" alt="">
+							<img src="img/star.svg" width="18" height="17" alt="">
 						</p>
 						<p class="hotel-rating-number">Рейтинг: 8,9</p>
 					</div>
 				</li>
 				<li class="hotel-item">
 					<p class="hotel-item-image">
-						<img src="" width="" height="" alt="Апартаменты Villas at Poco Diablo">
+						<img src="img/hotel-diablo.jpg" width="135" height="90" alt="Апартаменты Villas at Poco Diablo">
 					</p>
 					<div class="hotel-item-description">
-						<h3 class="hotel-title">Villas at Poco Diablo</h3>
+						<h3 class="hotel-title">
+							<a href="#">Villas at Poco Diablo</a>
+						</h3>
 						<p>
 							<span class="hotel-type">Апартаменты</span>
 							<span class="hotel price">от 2000 Р.</span>
@@ -156,9 +165,8 @@
 					</div>
 					<div class="hotel-item-rating">
 						<p class="hotel-rating-star">
-							<img src="" width="" height="" alt="Категория: 2 звезды">
-							<img src="" width="" height="" alt="">
-							<img src="" width="" height="" alt="">
+							<img src="img/star.svg" width="18" height="17" alt="Категория: 2 звезды">
+							<img src="img/star.svg" width="18" height="17" alt="">
 						</p>
 						<p class="hotel-rating-number">Рейтинг: 9,2</p>
 					</div>
@@ -173,17 +181,17 @@
 			<li><a class="social-button" href="#">
 				<span class="visually-hidden">Седона в Твиттере</span>
 			</a></li>
-			<li><a class="social-button" href="#"">
+			<li><a class="social-button" href="#">
 				<span class="visually-hidden">Седона на Фейсбуке</span>
 			</a></li>
-			<li><a class="social-button" href="#"">
+			<li><a class="social-button" href="#">
 				<span class="visually-hidden">Седона на YouTube</span>
 			</a></li>
 		</ul>
 		
 		<p class="footer-copyright">Website by
 			<a href="https://htmlacademy.ru/intensive/htmlcss">
-				<img src="" width="" height="" alt="Логотип HTML Academy">
+				<img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
 			</a>
 		</p>
 	</footer>
