--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <body>
 	<header>
 		<nav class="site-navigation">
-			<a class="logo" ><img src="" width="" height="" alt="Логотип сайта туристического городка Седона">
+			<a class="logo" >
+				<img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип сайта туристического городка Седона">
 			</a>
 			<ul class="main-navigation">
 				<li><a href="#">Информация</a></li>
@@ -22,7 +23,7 @@
 		<div class="welcome">
 			<h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
 			<p class="slogan">
-				<img src="" width="" height="" alt="Welcome to the gorgeus Sedona">
+				<img src="img/intro-welcome.svg" width="459" height="353" alt="Welcome to the gorgeus Sedona">
 			</p>
 		</div>
 
@@ -35,7 +36,7 @@
 					<h3 class="advantage-item-title">Настоящий городок</h3>
 					<p class="advantage-item-descriprion">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
 					<p class="advantage-item-image">
-						<img src=""width="" height="" alt="Фото - вид Седоны">
+						<img src="img/advantages-sedona.jpg" width="800" height="256" alt="Фото - вид Седоны">
 					</p>
 					<ul class="adventages-sublist">
 						<li class="sub-advantage">
@@ -57,7 +58,7 @@
 					<h3 class="advantage-item-title">Там есть Мост дьявола</h3>
 					<p class="advantage-item-descriprion">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
 					<p class="advantage-item-image">
-						<img src=""width="" height="" alt="Фото - Мост дьвола">
+						<img src="img/advantages-bridge.jpg" width="800" height="256" alt="Фото - Мост дьвола">
 					</p>
 				</li>
 				<li class="advantage-item">
@@ -122,7 +123,7 @@
 		</section>
 		<section class="map">
 			<h2 class="visually-hidden">Как нас найти</h2>
-			<img src="" width="" height="" alt="Седона на карте штата">
+			<img src="img/map.jpg" width="1200" height="593" alt="Седона на карте штата">
 		</section>
 	</main>
 	<footer>
@@ -131,17 +132,17 @@
 			<li><a class="social-button" href="#">
 				<span class="visually-hidden">Седона в Твиттере</span>
 			</a></li>
-			<li><a class="social-button" href="#"">
+			<li><a class="social-button" href="#">
 				<span class="visually-hidden">Седона на Фейсбуке</span>
 			</a></li>
-			<li><a class="social-button" href="#"">
+			<li><a class="social-button" href="#">
 				<span class="visually-hidden">Седона на YouTube</span>
 			</a></li>
 		</ul>
 		
 		<p class="footer-copyright">Website by
 			<a href="https://htmlacademy.ru/intensive/htmlcss">
-				<img src="" width="" height="" alt="Логотип HTML Academy">
+				<img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
 			</a>
 		</p>
 	</footer>
