--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
-	<header>
+<head>
+	<meta charset="utf-8">
+	<title>HTML Academy: Седона</title>
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+	<link href="css/normalize.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
+</head>
+<body>
+	<div class="wrapper">
+	<header class="main-header">
 		<nav class="site-navigation">
 			<a class="logo" >
 				<img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип сайта туристического городка Седона">
@@ -22,7 +26,7 @@
 	<main>
 		<div class="welcome">
 			<h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
-			<p class="slogan">
+			<p class="welcome-slogan">
 				<img src="img/intro-welcome.svg" width="459" height="353" alt="Welcome to the gorgeus Sedona">
 			</p>
 		</div>
@@ -32,31 +36,35 @@
 			<p>Рссмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 			<ul class="advantages-list">
 				<li class="advantage-item">
-					<span>- №1 -</span>
-					<h3 class="advantage-item-title">Настоящий городок</h3>
-					<p class="advantage-item-descriprion">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+					<div class="advantage-container">
+						<span>- №1 -</span>
+						<h3 class="advantage-item-title">Настоящий городок</h3>
+						<p class="advantage-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+					</div>
 					<p class="advantage-item-image">
 						<img src="img/advantages-sedona.jpg" width="800" height="256" alt="Фото - вид Седоны">
 					</p>
-					<ul class="adventages-sublist">
-						<li class="sub-advantage">
+					<ul class="advantages-sublist">
+						<li class="sub-advantage-house">
 							<h3>Жильё</h3>
 							<p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
 						</li>
-						<li class="sub-advantage">
+						<li class="sub-advantage-food">
 							<h3>Еда</h3>
 							<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
 						</li>
-						<li class="sub-advantage">
+						<li class="sub-advantage-souvenir">
 							<h3>Сувениры</h3>
 							<p>Не только китайского, но и местного производства!</p>
 						</li>
 					</ul>
 				</li>
 				<li class="advantage-item">
-					<span>- №2 -</span>
-					<h3 class="advantage-item-title">Там есть Мост дьявола</h3>
-					<p class="advantage-item-descriprion">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+					<div class="advantage-container">
+						<span>- №2 -</span>
+						<h3 class="advantage-item-title">Там есть<br>Мост дьявола</h3>
+						<p class="advantage-item-description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+					</div>
 					<p class="advantage-item-image">
 						<img src="img/advantages-bridge.jpg" width="800" height="256" alt="Фото - Мост дьвола">
 					</p>
@@ -64,19 +72,19 @@
 				<li class="advantage-item">
 					<span>- №3 -</span>
 					<h3 class="advantage-item-title">Небольшая площадь</h3>
-					<p class="advantage-item-descriprion">Все достопримечательности находятся очень близко</p>
+					<p class="advantage-item-description">Все достопримечательности находятся&nbsp;очень близко</p>
 					
 
 				</li>
 				<li class="advantage-item">
 					<span>- №4 -</span>
 					<h3 class="advantage-item-title">Красивая дорога</h3>
-					<p class="advantage-item-descriprion">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+					<p class="advantage-item-description">Ехать в Седону из Лас-Вегаса совсем не&nbsp;скучно!</p>
 				</li>
 				<li class="advantage-item">
 					<span>- №5 -</span>
 					<h3 class="advantage-item-title">Мало туристов</h3>
-					<p class="advantage-item-descriprion">Большинство едет в гранд каньон и толпится там</p>
+					<p class="advantage-item-description">Большинство едет в гранд каньон и&nbsp;толпится там</p>
 				</li>
 			</ul>
 		</section>
@@ -84,40 +92,44 @@
 			<h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
 			<p>
 				<b>Заинтересовались?</b>
-			Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне </p>
+			Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне </p>
 			<div class="hostel-search-container">
 				<a class="search" href="#">Поиск гостиницы в Седоне</a>
 				<form class="search-form" action="https://echo.htmlacademy.ru"  method="get">
 					<p class="search-form-field">
-						<label for="arrival">Дата заезда</label>
+						<label for="arrival">Дата заезда:</label>
 						<input type="text" name="arrival" id="arrival" value="24 апреля 2017">
-						<button class="form-button button-calendar" type="button"><span class="visually-hidden">Открыть календарь</span>
+						<button class="form-field-button button-calendar" type="button">
+							<span class="visually-hidden">Открыть календарь</span>
+							<svg class="button-calendar-icon" xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
 						</button>
 					</p>
 					<p class="search-form-field">
-						<label for="departure">Дата выезда</label>
+						<label for="departure">Дата выезда:</label>
 						<input type="text" name="departure" id="departure" value="4 июля 2017">
-						<button class="form-button button-calendar" type="button"><span class="visually-hidden">Открыть календарь</span>
+						<button class="form-field-button button-calendar" type="button">
+							<span class="visually-hidden">Открыть календарь</span>
+							<svg class="button-calendar-icon" xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
 						</button>
 					</p>
 					<p class="search-form-field">
-						<label for="adult">Взрослые</label>
-						<button class="form-button button-reduce" type="button"><span class="visually-hidden">Уменьшить количество</span>
+						<label for="adult">Взрослые:</label>
+						<button class="form-field-button button-reduce" type="button">&ndash;<span class="visually-hidden">Уменьшить количество</span>
 						</button>
 						<input type="text" name="adult" id="adult" value="2">
-						<button class="form-button button-upward" type="button"><span class="visually-hidden">Увеличить количество</span>
+						<button class="form-field-button button-upward" type="button">+<span class="visually-hidden">Увеличить количество</span>
 						</button>
 					</p>
 					<p class="search-form-field">
-						<label for="child">Дети</label>
-						<button class="form-button button-reduce" type="button"><span class="visually-hidden">Уменьшить количество</span>
+						<label for="child">Дети:</label>
+						<button class="form-field-button button-reduce" type="button">&ndash;<span class="visually-hidden">Уменьшить количество</span>
 						</button>
 						<input type="text" name="child" id="child" value="0">
-						<button class="form-button button-upward" type="button"><span class="visually-hidden">Увеличить количество</span>
+						<button class="form-field-button button-upward" type="button">+<span class="visually-hidden">Увеличить количество</span>
 						</button>
 					</p>
 
-					<button type="submit">Найти</button>
+					<button class="search-form-button" type="submit">Найти</button>
 				</form>
 			</div>
 		</section>
@@ -126,26 +138,27 @@
 			<img src="img/map.jpg" width="1200" height="593" alt="Седона на карте штата">
 		</section>
 	</main>
-	<footer>
+	<footer class="main-footer">
 		<p class="footer-hashtag">#visitsedona</p>
 		<ul class="footer-social">
-			<li><a class="social-button" href="#">
+			<li><a class="social-button social-twitter" href="#">
 				<span class="visually-hidden">Седона в Твиттере</span>
 			</a></li>
-			<li><a class="social-button" href="#">
+			<li><a class="social-button social-facebook" href="#">
 				<span class="visually-hidden">Седона на Фейсбуке</span>
 			</a></li>
-			<li><a class="social-button" href="#">
+			<li><a class="social-button social-youtube" href="#">
 				<span class="visually-hidden">Седона на YouTube</span>
 			</a></li>
 		</ul>
 		
-		<p class="footer-copyright">Website by
-			<a href="https://htmlacademy.ru/intensive/htmlcss">
-				<img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
+		<p class="footer-copyright">
+			<span>Website by</span>
+			<a class="footer-copyright-link" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Логотип HTML Academy">
+				<svg class="footer-copyright-logo" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108.08 36.85" with="115" height="41"><title>logo-htmlacademy-small1</title><path d="M44.61,26.88a2,2,0,0,0,.55-0.1v1.33a3.25,3.25,0,0,1-1.18.21,1.67,1.67,0,0,1-1.67-1,4.84,4.84,0,0,1-3.14,1.08c-1.51,0-2.91-.83-2.91-2.55,0-2.13,2-2.79,3.71-2.79a11.08,11.08,0,0,1,2.17.25v-0.3c0-1-.76-1.77-2.19-1.77a7.42,7.42,0,0,0-3,.64v-1.7a10.21,10.21,0,0,1,3.19-.55c2.36,0,3.81,1.12,3.81,3.65v3a0.54,0.54,0,0,0,.49.59h0.17Zm-6.44-1.13A1.35,1.35,0,0,0,39.63,27h0.11a3.39,3.39,0,0,0,2.41-1V24.58a9.72,9.72,0,0,0-1.81-.21c-1,0-2.16.33-2.16,1.38h0Zm12.36-6.11a5,5,0,0,1,2.57.64V22a4.08,4.08,0,0,0-2.3-.7,2.75,2.75,0,1,0,0,5.49,5,5,0,0,0,2.43-.64v1.71a6.27,6.27,0,0,1-2.76.57A4.21,4.21,0,0,1,46,24.51q0-.21,0-0.41a4.32,4.32,0,0,1,4.18-4.46h0.38Zm12.17,7.24a2,2,0,0,0,.55-0.1v1.33a3.25,3.25,0,0,1-1.18.21,1.67,1.67,0,0,1-1.67-1,4.84,4.84,0,0,1-3.14,1.08c-1.51,0-2.91-.83-2.91-2.55,0-2.13,2-2.79,3.71-2.79a11.08,11.08,0,0,1,2.17.25v-0.3c0-1-.76-1.77-2.19-1.77a7.42,7.42,0,0,0-3,.64v-1.7a10.21,10.21,0,0,1,3.19-.55c2.36,0,3.81,1.12,3.81,3.65v3a0.54,0.54,0,0,0,.49.59h0.17Zm-6.44-1.13A1.35,1.35,0,0,0,57.73,27h0.11a3.39,3.39,0,0,0,2.41-1V24.58a9.72,9.72,0,0,0-1.81-.21c-1.06,0-2.16.33-2.16,1.38h0ZM73,16V28.2H71.35V26.88a3.88,3.88,0,0,1-3.19,1.54,4.4,4.4,0,0,1,0-8.78,3.81,3.81,0,0,1,3,1.3V16H73Zm-4.53,5.22a2.76,2.76,0,1,0,0,5.52A2.86,2.86,0,0,0,71.15,25V23A2.91,2.91,0,0,0,68.49,21.27ZM79,19.64c3.31,0,4.46,2.68,3.92,5.09H76.7c0.21,1.5,1.67,2.11,3.19,2.11a6.11,6.11,0,0,0,2.64-.59v1.6a7.14,7.14,0,0,1-3,.57C77,28.42,74.78,27,74.78,24a4.18,4.18,0,0,1,4-4.39H79Zm0.09,1.54a2.28,2.28,0,0,0-2.44,2.1v0.06H81.3A2,2,0,0,0,79.13,21.18Zm5.73,7V19.87h1.65v1a3.81,3.81,0,0,1,2.78-1.27A2.86,2.86,0,0,1,91.89,21a4.12,4.12,0,0,1,2.91-1.33A3.06,3.06,0,0,1,98,23V28.2h-1.9V23.05a1.59,1.59,0,0,0-1.42-1.75H94.42a2.8,2.8,0,0,0-2.07,1.12V28.2h-1.9V23.05A1.59,1.59,0,0,0,89,21.31H88.8a3,3,0,0,0-2.21,1.29v5.63H84.86Zm21.31-8.33h1.9l-3.91,9.46c-0.9,2.17-2.09,2.86-3.35,2.86a4.76,4.76,0,0,1-1.1-.14V30.46a2.86,2.86,0,0,0,.85.12c0.9,0,1.58-.64,2.07-1.9l0.17-.42-4-8.4h2l2.86,6.29ZM38.73,1.46V6.22a3.81,3.81,0,0,1,2.7-1.14,3.25,3.25,0,0,1,3.44,3.4v5.15H43V8.72a1.81,1.81,0,0,0-1.61-2h-0.3a2.93,2.93,0,0,0-2.32,1.39v5.52h-1.9V1.46h1.9ZM49.94,2.31v3h3V6.91h-3v3.81c0,1.1.5,1.46,1.58,1.46a4.49,4.49,0,0,0,1.69-.33v1.6A6.8,6.8,0,0,1,51,13.8a2.55,2.55,0,0,1-2.86-2.74V6.89H46.58V5.26h1.5V2.74Zm5.4,11.31V5.28H57v1A3.81,3.81,0,0,1,59.77,5a2.86,2.86,0,0,1,2.6,1.33A4.12,4.12,0,0,1,65.28,5,3.06,3.06,0,0,1,68.44,8.4v5.21h-1.9V8.46a1.59,1.59,0,0,0-1.42-1.75H64.89a2.8,2.8,0,0,0-2.07,1.12v5.78h-1.9V8.46A1.59,1.59,0,0,0,59.5,6.71H59.27A3,3,0,0,0,57.06,8v5.63H55.34ZM71.17,1.45H73V13.6H71.17V1.45ZM14.71,0H14.55L0,1.54V28.21l14.55,8.66,14.55-8.66V1.54Zm12.5,27.1L14.55,34.64,1.9,27.12V16.18l12.59,7.5V25L5.86,19.9v1.31l8.68,5.21v1.39L5.87,22.65V24l8.68,5.21,8.75-5.24V18.31L27.2,16V27.12Zm0-12.53-3.48,2-1.6,1L14.51,13v1.31L21,18.23H21l-0.14.09-1,.54-5.37-3.2V17l4.24,2.52-1,.67-3.2-1.9v1.31l2.1,1.24L14.5,22.1,2,14.65,14.51,7.11Zm0-1.32L14.49,5.76,1.91,13.25v-10L14.56,1.92,27.21,3.25v10h0Z" transform="translate(0 -0.02)" fill="#231f20"/></svg>
 			</a>
 		</p>
 	</footer>
-  
-  </body>
+</div>
+</body>
 </html>
