Форма поиска гостиницы  - в IE
Исправлена ошибка отображения формы (выравние полей) в IE

--- a/hostels.html
+++ b/hostels.html
@@ -62,6 +62,7 @@
 						</li>
 					</ul>
 				</fieldset>
+				<div class="filter-container">
 				<div class="filter-price">
 					<p>Стоимость в сутки (Р):</p>
 					<p class="price-controls">
@@ -81,6 +82,7 @@
 					</div>
 				</div>
 				<button class="filters-form-button" type="submit">Показать</button>
+			</div>
 			</form>
 		</section>
 
