--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<ul class="advantages-list">
 					<li class="advantage-item">
 						<div class="advantage-container">
-							<span>- №1 -</span>
+							<span>№1</span>
 							<h3 class="advantage-item-title">Настоящий городок</h3>
 							<p class="advantage-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
 						</div>
@@ -61,7 +61,7 @@
 					</li>
 					<li class="advantage-item">
 						<div class="advantage-container">
-							<span>- №2 -</span>
+							<span>№2</span>
 							<h3 class="advantage-item-title">Там есть<br>Мост дьявола</h3>
 							<p class="advantage-item-description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
 						</div>
@@ -70,17 +70,17 @@
 						</p>
 					</li>
 					<li class="advantage-item">
-						<span>- №3 -</span>
+						<span>№3</span>
 						<h3 class="advantage-item-title">Небольшая площадь</h3>
 						<p class="advantage-item-description">Все достопримечательности находятся&nbsp;очень близко</p>
 					</li>
 					<li class="advantage-item">
-						<span>- №4 -</span>
+						<span>№4</span>
 						<h3 class="advantage-item-title">Красивая дорога</h3>
 						<p class="advantage-item-description">Ехать в Седону из Лас-Вегаса совсем не&nbsp;скучно!</p>
 					</li>
 					<li class="advantage-item">
-						<span>- №5 -</span>
+						<span>№5</span>
 						<h3 class="advantage-item-title">Мало туристов</h3>
 						<p class="advantage-item-description">Большинство едет в гранд каньон и&nbsp;толпится там</p>
 					</li>
