--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 			<section class="advantages">
 				<h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-				<p>Рссмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+				<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 				<ul class="advantages-list">
 					<li class="advantage-item">
 						<div class="advantage-container">
