Минимизированы CSS- и JS-файлы

--- a/hostels.html
+++ b/hostels.html
@@ -5,7 +5,7 @@
 	<title>HTML Academy: Седона - гостиницы</title>
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
+	<link href="css/style-min.css" rel="stylesheet">
 </head>
 <body>
 	<div class="wrapper">
@@ -194,7 +194,7 @@
 					<span class="visually-hidden">Седона на YouTube</span>
 				</a></li>
 			</ul>
-			
+
 			<p class="footer-copyright">
 				<span>Website by</span>
 				<a class="footer-copyright-link" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Логотип HTML Academy">
