--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				</p>
 				<div class="hostel-search-container">
 					<a class="search" href="#">Поиск гостиницы в Седоне</a>
-					<form class="search-form search-form-hidden" action="https://echo.htmlacademy.ru"  method="get">
+					<form class="search-form search-form-show" action="https://echo.htmlacademy.ru"  method="get">
 						<p class="search-form-field">
 							<label for="arrival">Дата заезда:</label>
 							<input type="text" name="arrival" id="arrival" value="24 апреля 2017">
